--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>Library</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <h1>Header 1</h1>
+    <div class="topbar">
+        <h1>Library</h1>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
