Single book layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <div class="topbar">
         <h1>Library</h1>
     </div>
+    <div class="bookList">
+        <div class="book">
+            <h2>Pan Tadeusz</h2>
+            <p>by Adam Mickiewicz</p>
+            <p>Pages: 231</p>
+            <div class="inline">
+                <p>Has been read?</p><button>Yes</button>
+            </div>
+            <div class="inline">
+                <button>Modify</button><button>Delete</button>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
