Basic book printing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="topbar">
         <h1>Library</h1>
     </div>
-    <div class="bookList">
+    <div class="booksList">
         <div class="book">
             <h2>Pan Tadeusz</h2>
             <p>by Adam Mickiewicz</p>
@@ -24,39 +24,6 @@
             </div>
         </div>
         <div class="book">
-            <h2>Pan Tadeusz</h2>
-            <p>by Adam Mickiewicz</p>
-            <p>Pages: 231</p>
-            <div class="inline">
-                <p>Has been read?</p><button>Yes</button>
-            </div>
-            <div class="inline">
-                <button>Modify</button><button>Delete</button>
-            </div>
-        </div>
-        <div class="book">
-            <h2>Pan Tadeusz</h2>
-            <p>by Adam Mickiewicz</p>
-            <p>Pages: 231</p>
-            <div class="inline">
-                <p>Has been read?</p><button>Yes</button>
-            </div>
-            <div class="inline">
-                <button>Modify</button><button>Delete</button>
-            </div>
-        </div>
-    <div class="book">
-            <h2>Pan Tadeusz</h2>
-            <p>by Adam Mickiewicz</p>
-            <p>Pages: 231</p>
-            <div class="inline">
-                <p>Has been read?</p><button>Yes</button>
-            </div>
-            <div class="inline">
-                <button>Modify</button><button>Delete</button>
-            </div>
-        </div>
-    <div class="book">
             <h2>Pan Tadeusz</h2>
             <p>by Adam Mickiewicz</p>
             <p>Pages: 231</p>
