Add prompt input for book info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="topbar">
         <h1>Library</h1>
+        <button onclick="newBook()">Add a Book</button>
     </div>
     <div class="booksList">
         <div class="book">
