--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
             </div>
         </div>
     </div>
+    <div class="inputForm">
+       <form>
+           <h1>Add a book</h1>
+           <p>Book title:</p>
+           <input type="text" required>
+           <p>Book author:</p>
+           <input type="text" required>
+           <p>Number of pages:</p>
+           <input type="number" required>
+           <div class="inline">
+               <p>Has been read?</p>
+               <input type="checkbox">
+           </div>
+           <button type="submit">Submit</button>
+       </form> 
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
