basic form styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="inputForm hidden">
-        <button class="closeButton" onclick="closeForm()">x</button>
+        <button id="closeButton" onclick="closeForm()">x</button>
         <h1>Add a book</h1>
         <p>Book title:</p>
         <input type="text" id="bookTitle">
