--- a/index.html
+++ b/index.html
@@ -12,30 +12,7 @@
         <h1>Library</h1>
         <button onclick="openForm()">Add a Book</button>
     </div>
-    <div class="booksList">
-        <div class="book">
-            <h2>Pan Tadeusz</h2>
-            <p>by Adam Mickiewicz</p>
-            <p>Pages: 231</p>
-            <div class="inline">
-                <p>Has been read?</p><button>Yes</button>
-            </div>
-            <div class="inline">
-                <button>Modify</button><button>Delete</button>
-            </div>
-        </div>
-        <div class="book">
-            <h2>Pan Tadeusz</h2>
-            <p>by Adam Mickiewicz</p>
-            <p>Pages: 231</p>
-            <div class="inline">
-                <p>Has been read?</p><button>Yes</button>
-            </div>
-            <div class="inline">
-                <button>Modify</button><button>Delete</button>
-            </div>
-        </div>
-    </div>
+    <div class="booksList"></div>
     <div class="inputForm hidden">
         <button id="closeButton" onclick="closeForm()">x</button>
         <h1>Add a book</h1>
