--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
         </div>
         <button onclick="newBook()">Submit</button>
     </div>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCBKuwQ_JJP8W7iPYIcRhk-wtoX0aDZCMA",
+    authDomain: "library-grabowskidev.firebaseapp.com",
+    projectId: "library-grabowskidev",
+    storageBucket: "library-grabowskidev.appspot.com",
+    messagingSenderId: "599794421355",
+    appId: "1:599794421355:web:e288b71cac32d966e62b2e"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 <script src="script.js"></script>
 </html>
